Fix wiring for Page Info buttons/links.

This also includes a partial revert of
crrev.com/794ec463813ef0fa3c0523c68f1df2a99017b18e [formerly 0af7d0edfddd038461850cbc8957f1fba1686df9] to force proper sizing of the "Re-enable warnings" styled label.

BUG=655872

Review-Url: https://codereview.chromium.org/2422473002
Cr-Commit-Position: refs/heads/master@{#425401}

Former-commit-id: 633c166bf730a58a847a6705c46ec08989a74db0